# intextus

./: Cargo.toml  README.md
src/: buf.rs  deque.rs  error.rs  lib.rs  string.rs  vec.rs
src/deque/: cmp.rs  convert.rs  iter.rs  serde.rs
src/string/: cmp.rs  convert.rs  serde.rs
src/vec/: cmp.rs  convert.rs  iter.rs  serde.rs
