[package]
name = "intextus"
version = "0.4.0"
edition = "2024"
authors = ["Lingxuan Ye <ink@lingxuan.io>"]
categories = ["data-structures", "no-std", "no-std::no-alloc"]
repository = "https://github.com/Lingxuan-Ye/intextus"
readme = "README.md"
license = "MIT"
description = "Inline collections."

[dependencies.serde_core]
version = "1.0.228"
default-features = false
optional = true

[features]
default = ["serde"]
serde = ["dep:serde_core"]
